@@ -1,5 +1,9 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.564 2006/02/08 22:17:39 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.565 2006/02/09 00:46:11 rocket Exp $
+
+  09 Feb 2006; Eric Edgar <rocket@gentoo.org>
+  modules/generic_stage_target.py:
+  Fix indentation issues
 
   08 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
   This is 2.0_rc34.
